--- a/src/pages/comida-dia/comida-dia.html
+++ b/src/pages/comida-dia/comida-dia.html
@@ -1,19 +1,19 @@
-<!--
-  Generated template for the ComidaDiaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Comidas del día</ion-title>
+    <ion-title text-center>
+      <h2 style="margin-left: -55px">Categorías</h2>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <div class="div-categoria">
+    <h1 text-center>Comida del día</h1>
+  </div>
 
   <ion-card *ngFor="let item of platillos">
     <img [src]="item.foto"/>
@@ -23,10 +23,7 @@
       </ion-card-title>
       <p>{{ item.descripcion }}</p>
       <p><b>Precio: </b>{{ item.precio }}</p>
-      <br/>
       <p><b>Disponible en: </b>{{ item.available }}</p>
-      <!-- <h2><b>Información Nutrimental:</b></h2>
-      <img [src]="item.infoNutri"/> -->
     </ion-card-content>
   </ion-card>
 
