--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -9,4 +9,20 @@
 
 <ion-content padding>
 
+  <div>
+    <h1 text-center><b>UniEats</b></h1>
+    <h2 text-center>Universidad Autónoma de Nuevo León</h2>
+    <h3 text-center>Facultad de Ingeniería Mecánica y Eléctrica</h3>
+    <p>
+      <b>Unieats</b> es una aplicación móvil para dispositivos Android
+      en la cual puedes consultar información acerca de los platillos
+      y promociones que ofrecen las distintas cafeterías del Campus
+      Ciudad Universitaria de la UANL hecha por estudiantes de la <b>Facultad
+      de Ingeniería Mecánica y Eléctrica</b> para la materia <b>Interacción Humano-Computadora</b>
+    </p>
+    <div style="display: flex; justify-content:center">
+      <img src="./assets/imgs/logos/logo.png">
+    </div>
+  </div>
+
 </ion-content>
