--- a/src/pages/platillos-facdyc/platillos-facdyc.html
+++ b/src/pages/platillos-facdyc/platillos-facdyc.html
@@ -1,7 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>FACDyC</ion-title>
+    <ion-title text-center>
+      <h2 style="margin-left: -55px">FACDYC</h2>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,8 +20,6 @@
       <p>{{ item.descripcion }}</p>
       <p><b>Precio: </b>{{ item.precio }}</p>
       <br/>
-      <!-- <h2><b>Información Nutrimental:</b></h2>
-      <img [src]="item.infoNutri"/> -->
     </ion-card-content>
   </ion-card>
 
