--- a/src/pages/platillos-fic/platillos-fic.html
+++ b/src/pages/platillos-fic/platillos-fic.html
@@ -1,7 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>FIC</ion-title>
+    <ion-title text-center>
+      <h2 style="margin-left: -55px">FIC</h2>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
