--- a/src/pages/platillos-fime/platillos-fime.html
+++ b/src/pages/platillos-fime/platillos-fime.html
@@ -2,12 +2,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title text-lg-center>FIME</ion-title>
+    <ion-title text-center>
+      <h2 style="margin-left: -55px">FIME</h2>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
-<ion-content>
+<ion-content padding>
 
   <h1 text-center>Platillos</h1>
 
