--- a/src/pages/platillos-fod/platillos-fod.html
+++ b/src/pages/platillos-fod/platillos-fod.html
@@ -1,7 +1,9 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>FOD</ion-title>
+    <ion-title text-center>
+      <h2 style="margin-left: -55px">FOD</h2>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
